overlays/applications/vtt-maps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vtt-maps
  namespace: vtt-maps
  labels:
    app: vtt-maps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vtt-maps
  template:
    metadata:
      labels:
        app: vtt-maps
    spec:
      containers:
        - name: vtt-maps
          image: mbround18/vtt-maps:static-site
          imagePullPolicy: Always # Ensures always pulling the latest version of the tag
          ports:
            - containerPort: 80
