overlays/applications/vtt-maps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vtt-maps
  namespace: vtt-maps
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: vtt-maps
