overlays/applications/vtt-maps/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: vtt-maps-gateway
  namespace: vtt-maps
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "vtt-maps.dnd-apps.dev"
      tls:
        mode: PASSTHROUGH
