overlays/applications/vtt-maps/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vtt-maps
  namespace: vtt-maps
spec:
  hosts:
    - "vtt-maps.dnd-apps.dev"
  gateways:
    - vtt-maps-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      redirect:
        scheme: https
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: vtt-maps
            port:
              number: 443
